# minimize-svgs

./: Cargo.toml
src/: .env  graphql_structs.rs  main.rs  structs.rs
src/config/db/: schema.yaml
src/config/db/migrations/: 1708325190844_taskie_migration.yaml
